Changed font color, added search form

--- a/wp-content/themes/twentytwelve/css/ie.css
+++ b/wp-content/themes/twentytwelve/css/ie.css
@@ -70,9 +70,10 @@ body.full-width .site-content {
 	line-height: 1.846153846;
 }
 .main-navigation ul.nav-menu,
-.main-navigation div.nav-menu > ul {
+.main-navigation div.nav-menu, ul {
 	border-bottom: 1px solid #ededed;
-	border-top: 1px solid #ededed;
+	border-top: 1px solid #ff0000;
+        background-color: #dddddd;
 	display: inline-block !important;
 	text-align: left;
 	width: 100%;
